# Sewer-Inspection-Robot-Control-System

./: .gitignore  CMakeLists.txt  MidTermCheck_English.md  README.md  TESTING.md  create_pipe_world.py  package.xml  run.sh  setup.cfg  setup.py  test_teleop.py  中期检查.md
colcon_ws/install/: local_setup.sh  setup.sh
colcon_ws/install/four_wheel_robot/lib/four_wheel_robot/: keyboard_teleop
colcon_ws/install/four_wheel_robot/share/four_wheel_robot/: package.dsv  package.ps1  package.sh  package.xml
colcon_ws/log/: latest_build
colcon_ws/src/four_wheel_robot/: package.xml  setup.cfg  setup.py
colcon_ws/src/four_wheel_robot/config/: ros2_control.yaml
colcon_ws/src/four_wheel_robot/four_wheel_robot/: keyboard_teleop.py
colcon_ws/src/four_wheel_robot/launch/: sim.launch.py  teleop.launch.py
colcon_ws/src/four_wheel_robot/rviz/: robot.rviz
colcon_ws/src/four_wheel_robot/urdf/: four_wheel_robot.urdf.xacro
colcon_ws/src/four_wheel_robot/worlds/: flat_world.sdf
config/: four_wheel_bot.rviz
four_wheel_bot/: __init__.py  teleop_keyboard.py
install/: local_setup.sh  setup.sh
install/four_wheel_bot/share/four_wheel_bot/: package.bash  package.zsh
install/my_bot/lib/my_bot/: imu_odom_logger  teleop_keyboard.py
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: ros2_control.yaml  rviz_config.rviz
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: gazebo.launch.py  rviz.launch.py  sim.launch.py  teleop.launch.py
install/my_bot/share/my_bot/rviz/: my_bot.rviz
install/my_bot/share/my_bot/urdf/: my_bot.urdf.xacro  robot.urdf.xacro
install/my_bot/share/my_bot/worlds/: empty.world
install/simple_car_sim/share/simple_car_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simple_car_sim/share/simple_car_sim/cmake/: simple_car_simConfig-version.cmake  simple_car_simConfig.cmake
install/simple_car_sim/share/simple_car_sim/environment/: ament_prefix_path.dsv  path.dsv
install/simple_car_sim/share/simple_car_sim/rviz/: config.rviz
launch/: four_wheel_bot.launch.py
log/: latest_build  latest_list
ros2_ws/: fix_install.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/my_bot/: package.xml  setup.py
ros2_ws/src/my_bot/urdf/: robot.urdf.xacro
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_bot/: CMakeLists.txt  README.md  test_system.sh
src/my_bot/config/: ros2_control.yaml
src/my_bot/install/: local_setup.sh  setup.sh
src/my_bot/install/my_bot/share/my_bot/: local_setup.dsv  local_setup.sh  package.sh  package.xml
src/my_bot/install/my_bot/share/my_bot/config/: my_bot.rviz
src/my_bot/install/my_bot/share/my_bot/launch/: my_bot_ignition.launch.py
src/my_bot/install/my_bot/share/my_bot/urdf/: my_bot.urdf.xacro
src/my_bot/install/my_bot/share/my_bot/worlds/: empty.world
src/my_bot/launch/: gazebo.launch.py  my_bot_launch.py  rsp.launch.py  rviz.launch.py  sim.launch.py  teleop.launch.py
src/my_bot/log/: latest_build
src/my_bot/rviz/: my_bot.rviz  view_robot.rviz
src/my_bot/scripts/: teleop_keyboard.py
src/my_bot/urdf/: my_bot.urdf.xacro  robot.urdf.xacro
src/my_bot/worlds/: empty.world
src/simple_car_sim/: CMakeLists.txt  README.md
src/simple_car_sim/launch/: simulation.launch.py
src/simple_car_sim/scripts/: autonomous_control.py  keyboard_control.py
src/simple_car_sim/urdf/: robot.urdf.xacro
src/simple_car_sim/worlds/: car_world.sdf  pipe_world.sdf
urdf/: four_wheel_bot.urdf.xacro
worlds/: four_wheel_bot.world
(+34 files in other folders)
