<?xml version="1.0"?>
<package format="3">
  <name>four_wheel_robot</name>
  <version>0.1.0</version>
  <description>Four wheel mobile robot simulation with ROS 2 Humble, Gazebo Fortress, and RViz2.</description>

  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>diff_drive_controller</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
